profilematic (2.4.4) unstable; urgency=low
  * Updated translations: German, Italian, Taiwanese

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 26 Dec 2013 01:00:00 +0300

profilematic (2.4.3) unstable; urgency=low
  * Updated translations: German, Finnish, Italian, Polish, Taiwanese

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 11 Dec 2013 23:50:00 +0300

profilematic (2.4.2) unstable; urgency=low
  * Wrapping of topic in time dialog (some translations need this)
  * Up-to-date translations: Catalan
  * Building for desktop target without rumbe-effect for ease of development

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 16 Sep 2013 01:00:00 +0300

profilematic (2.4.1) unstable; urgency=low
  * Up-to-date translations: Russian

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 25 Aug 2013 23:45:00 +0300

profilematic (2.4.0) unstable; urgency=low
  * Time interval condition
  * Comments for translators modified to be usable in transifex
  * Up-to-date translations: Chinese, Czech, German, Italian, Swedish

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 25 Aug 2013 23:45:00 +0300

profilematic (2.3.0) unstable; urgency=low
  * Brightness action
  * Action volume has restore previous
  * Fixes to aciton volume to more closely follow what is settable in harmattan UI

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 8 Aug 2013 02:00:00 +0300

profilematic (2.2.3) unstable; urgency=low
  * New translations: German, Polish, Russian, Swedish, Taiwanese
  * Small improvements for translations

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 23 Jul 2013 23:30:00 +0300

profilematic (2.2.2) unstable; urgency=low
  * Czech translation
  * Small improvements for translations

 -- Arto Jalkanen <ajalkane@gmail.com>  Wed, 29 May 2013 22:00:00 +0300

profilematic (2.2.1) unstable; urgency=low
  * Idle condition with clock interface

 -- Arto Jalkanen <ajalkane@gmail.com>  Tue, 16 Apr 2013 22:00:00 +0300

profilematic (2.2.0) unstable; urgency=low
  * Translations