@@ -30,8 +30,9 @@
   * 0 <= 1.1.1, before timeEnd
   * 1 = 1.2.0, endTime, default rule, cell tower based location
   * 2 = 1.6.0, multi-rule
+  * 3 = 2.4.4, Last Nokia Store version before updates not allowed
   */
-#define RULES_VERSION 2
+#define RULES_VERSION 3
 
 class Configuration
 {
